SEO optimization - meta tags, structured data, sitemap

--- a/index.html
+++ b/index.html
@@ -11,8 +11,154 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spendbase - Crypto Card Comparison</title>
+
+  <!-- SEO Meta Tags -->
+  <title>Best Crypto Cards 2025 | Compare USDC & Bitcoin Debit Cards | Spendbase</title>
+  <meta name="description" content="Compare 70+ crypto debit cards. Find the best USDC cards, Bitcoin cards, and stablecoin spending cards with up to 15% cashback. Self-custody & non-custodial options. No FX fees.">
+  <meta name="keywords" content="crypto card, crypto debit card, USDC card, bitcoin card, stablecoin card, cryptocurrency card, self-custody card, non-custodial card, crypto cashback, best crypto card 2025">
+  <meta name="author" content="Spendbase">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://spendbase.cards">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://spendbase.cards">
+  <meta property="og:title" content="Best Crypto Cards 2025 | Compare USDC & Bitcoin Debit Cards">
+  <meta property="og:description" content="Compare 70+ crypto debit cards. Find the best USDC cards, Bitcoin cards, and stablecoin spending cards with up to 15% cashback.">
+  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
+  <meta property="og:site_name" content="Spendbase">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://spendbase.cards">
+  <meta name="twitter:title" content="Best Crypto Cards 2025 | Compare USDC & Bitcoin Debit Cards">
+  <meta name="twitter:description" content="Compare 70+ crypto debit cards. Find the best USDC cards, Bitcoin cards, and stablecoin spending cards with up to 15% cashback.">
+  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
+
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
+
+  <!-- Structured Data - Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Spendbase",
+    "url": "https://spendbase.cards",
+    "logo": "https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public",
+    "description": "The leading crypto card comparison platform. Compare 70+ cryptocurrency debit cards.",
+    "sameAs": []
+  }
+  </script>
+
+  <!-- Structured Data - Website with Search -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Spendbase",
+    "url": "https://spendbase.cards",
+    "description": "Compare the best crypto debit cards, USDC cards, and Bitcoin cards. Find self-custody and non-custodial options with cashback rewards.",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://spendbase.cards/?search={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+
+  <!-- Structured Data - FAQ -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What is a crypto card?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "A crypto card is a debit or credit card that allows you to spend your cryptocurrency holdings at any merchant that accepts traditional card payments. These cards bridge the gap between digital assets and everyday commerce."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is a USDC card?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "A USDC card is a crypto debit card that lets you spend USDC stablecoins directly. USDC is pegged 1:1 to the US Dollar, so you avoid crypto volatility while enjoying the benefits of blockchain-based payments."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is a self-custody crypto card?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "A self-custody or non-custodial crypto card lets you spend directly from your own wallet where you control the private keys. No third party holds your funds, giving you full control over your assets."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which crypto card has the best cashback?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Cashback rates vary from 1% to 15% depending on the card and tier. Top cashback cards include Fold (up to 15% in Bitcoin), Bybit (up to 10%), Plutus (up to 9% in PLU), and Crypto.com (up to 8% in CRO)."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Are crypto cards safe to use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, reputable crypto cards use bank-grade security and are often backed by regulated entities. Self-custody cards offer additional security as you maintain control of your private keys."
+        }
+      }
+    ]
+  }
+  </script>
+
+  <!-- Structured Data - Product Comparison -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ItemList",
+    "name": "Best Crypto Cards 2025",
+    "description": "Compare the top cryptocurrency debit cards for spending Bitcoin, USDC, and other digital assets",
+    "numberOfItems": 70,
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "item": {
+          "@type": "Product",
+          "name": "Ether.fi Cash Card",
+          "description": "Self-custody DeFi card with 4.08% cashback in ETHFI. Borrow against staked ETH without selling.",
+          "brand": "Ether.fi"
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "item": {
+          "@type": "Product",
+          "name": "Crypto.com Card",
+          "description": "Popular exchange card with up to 8% cashback in CRO. 100M+ users worldwide.",
+          "brand": "Crypto.com"
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "item": {
+          "@type": "Product",
+          "name": "MetaMask Card",
+          "description": "Self-custody Mastercard powered by Linea L2. Spend directly from your MetaMask wallet.",
+          "brand": "MetaMask"
+        }
+      }
+    ]
+  }
+  </script>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -1348,9 +1494,22 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
 
   return (
     <div className="max-w-6xl mx-auto p-6">
+      {/* SEO-optimized hero section */}
+      <header className="mb-8">
+        <h1 className={`text-4xl font-bold mb-3 ${darkMode ? 'text-white' : 'text-gray-900'}`}>Best Crypto Cards 2025</h1>
+        <p className={`text-lg mb-4 ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>
+          Compare {allCards.length}+ crypto debit cards, USDC cards, and Bitcoin cards. Find the perfect card with cashback rewards, self-custody options, and zero FX fees.
+        </p>
+        <div className={`text-sm ${darkMode ? 'text-gray-400' : 'text-gray-600'}`}>
+          <span className="inline-flex items-center gap-2 mr-4">✓ Self-custody & non-custodial cards</span>
+          <span className="inline-flex items-center gap-2 mr-4">✓ Up to 15% crypto cashback</span>
+          <span className="inline-flex items-center gap-2">✓ Stablecoin spending (USDC, USDT)</span>
+        </div>
+      </header>
+
       <div className="mb-6">
-        <h2 className={`text-3xl font-bold mb-2 ${darkMode ? 'text-white' : 'text-gray-900'}`}>Explore Crypto Cards</h2>
-        <p className={darkMode ? 'text-gray-400' : 'text-gray-600'}>Compare {allCards.length} crypto debit cards. Hover for details.</p>
+        <h2 className={`text-2xl font-bold mb-2 ${darkMode ? 'text-white' : 'text-gray-900'}`}>Explore Crypto Cards</h2>
+        <p className={darkMode ? 'text-gray-400' : 'text-gray-600'}>Hover over any card for details. Filter by custody type, network, and region.</p>
       </div>
 
       {/* Wizard Promo Banner */}
