--- a/index.html
+++ b/index.html
@@ -116,46 +116,31 @@
   }
   </script>
 
-  <!-- Structured Data - Product Comparison -->
+  <!-- Structured Data - Article/Comparison -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "ItemList",
-    "name": "Best Crypto Cards 2025",
-    "description": "Compare the top cryptocurrency debit cards for spending Bitcoin, USDC, and other digital assets",
-    "numberOfItems": 70,
-    "itemListElement": [
-      {
-        "@type": "ListItem",
-        "position": 1,
-        "item": {
-          "@type": "Product",
-          "name": "Ether.fi Cash Card",
-          "description": "Self-custody DeFi card with 4.08% cashback in ETHFI. Borrow against staked ETH without selling.",
-          "brand": "Ether.fi"
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 2,
-        "item": {
-          "@type": "Product",
-          "name": "Crypto.com Card",
-          "description": "Popular exchange card with up to 8% cashback in CRO. 100M+ users worldwide.",
-          "brand": "Crypto.com"
-        }
-      },
-      {
-        "@type": "ListItem",
-        "position": 3,
-        "item": {
-          "@type": "Product",
-          "name": "MetaMask Card",
-          "description": "Self-custody Mastercard powered by Linea L2. Spend directly from your MetaMask wallet.",
-          "brand": "MetaMask"
-        }
+    "@type": "Article",
+    "headline": "Best Crypto Cards 2025 - Compare 70+ USDC & Bitcoin Debit Cards",
+    "description": "Compare the top cryptocurrency debit cards for spending Bitcoin, USDC, and other digital assets. Find self-custody options with up to 15% cashback.",
+    "author": {
+      "@type": "Organization",
+      "name": "Spendbase"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Spendbase",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public"
       }
-    ]
+    },
+    "datePublished": "2025-01-01",
+    "dateModified": "2025-01-27",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://spendbase.cards/"
+    }
   }
   </script>
 
@@ -1506,11 +1491,6 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
           <span className="inline-flex items-center gap-2">✓ Stablecoin spending (USDC, USDT)</span>
         </div>
       </header>
-
-      <div className="mb-6">
-        <h2 className={`text-2xl font-bold mb-2 ${darkMode ? 'text-white' : 'text-gray-900'}`}>Explore Crypto Cards</h2>
-        <p className={darkMode ? 'text-gray-400' : 'text-gray-600'}>Hover over any card for details. Filter by custody type, network, and region.</p>
-      </div>
 
       {/* Wizard Promo Banner */}
       <div className={`mb-6 p-4 rounded-xl border bg-gradient-to-r ${darkMode ? 'from-lime-400/10 to-emerald-500/10 border-lime-400/30' : 'from-lime-50 to-emerald-50 border-lime-200'}`}>
