--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ function Card({ card, ratings, onRate, darkMode = true, userRatedCards = {}, isI
     >
       <div style={{ position: 'relative', width: '100%', height: '100%', transformStyle: 'preserve-3d', transition: 'transform 0.6s', transform: flipped ? 'rotateY(180deg)' : 'none' }}>
         {/* FRONT */}
-        <div style={{ position: 'absolute', width: '100%', height: '252px', backfaceVisibility: 'hidden' }}>
+        <div style={{ position: 'absolute', width: '100%', height: '252px', backfaceVisibility: 'hidden', pointerEvents: flipped ? 'none' : 'auto' }}>
           <div className={`h-full rounded-2xl p-4 text-white shadow-xl relative overflow-hidden flex flex-col ${card.bg === 'holographic' || card.bg === 'solayer-gradient' || card.bg === 'kosh-gradient' || card.bg === 'bleap-gradient' || card.bg === 'redotpay-gradient' ? '' : 'bg-gradient-to-br ' + card.bg}`} style={card.bg === 'holographic' ? { background: 'linear-gradient(135deg, #a8edea 0%, #fed6e3 25%, #d299c2 50%, #a8c0ff 75%, #c2ffd8 100%)' } : card.bg === 'solayer-gradient' ? { background: 'linear-gradient(160deg, #1a5c4c 0%, #134539 30%, #0d3330 60%, #0a2725 100%)' } : card.bg === 'kosh-gradient' ? { background: 'linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 25%, #1a1a1a 50%, #2d2d2d 75%, #1a1a1a 100%)' } : card.bg === 'bleap-gradient' ? { background: 'radial-gradient(ellipse at 70% 40%, #d4d4d4 0%, #a3a3a3 30%, #737373 60%, #525252 100%)' } : card.bg === 'redotpay-gradient' ? { background: 'linear-gradient(135deg, #E31B54 0%, #E31B54 40%, #FF3366 60%, #E31B54 100%)' } : {}}>
             {/* Shimmer effect */}
             <div className="absolute inset-0 overflow-hidden rounded-2xl pointer-events-none">
